--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="index.html">Home</a>
+                            <a href="index.html" >Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="#">Course</a>
+                            <a href="course.html">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
@@ -56,14 +56,14 @@
                             <a href="#">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="knowledge_sharing.html">Knowledge Sharing</a>
+                            <a href="#">Knowledge Sharing</a>
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
+                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#" id="promo-docs-link"><img src="/assets/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> เอกสารประชาสัมพันธ์ </a>
+                                        <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
                                     </li>
                                 </ul>
                             </div>
@@ -101,7 +101,7 @@
             <div>
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4 margin__align">
                             <div class="d-flex flex-row align-items-center bg__white">
                                 <div class="padding__image">
                                     <img src="/images/pin_icon.png" alt="pin_icon" width="100%" class="image__width">
@@ -115,7 +115,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4 margin__align">
                             <div class="d-flex flex-row align-items-center bg__white">
                                 <div class="padding__image">
                                     <img src="/images/facebook_icon.png" alt="facebook_icon" width="100%"
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4 margin__align">
                             <div class="d-flex flex-row align-items-center bg__white">
                                 <div class="padding__image">
                                     <img src="/images/telnumber_icon.png" alt="telnumber_icon" width="100%"
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4 margin__align">
                             <div class="d-flex flex-row align-items-center bg__white">
                                 <div class="padding__image">
                                     <img src="/images/time__icon.png" alt="time__icon" width="100%"
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4 margin__align">
                             <div class="d-flex flex-row align-items-center bg__white">
                                 <div class="padding__image">
                                     <img src="/images/mail_icon.png" alt="mail_icon" width="100%" class="image__width">
@@ -165,7 +165,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4 margin__align">
                             <div class="d-flex flex-row align-items-center bg__white">
                                 <div class="padding__image">
                                     <img src="/images/line_icon.png" alt="line_icon" width="100%" class="image__width">
