--- a/about.html
+++ b/about.html
@@ -22,15 +22,15 @@
             <div class="logo-container">
                 <img src="/images/PDRC-logo.svg" alt="logo" width="40">
             </div>
-
+  
             <div class="nav-btn">
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="index.html" >Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="#">Course</a>
+                            <a href="course.html">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
@@ -55,14 +55,14 @@
                             <a href="#">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="knowledge_sharing.html">Knowledge Sharing</a>
+                            <a href="#">Knowledge Sharing</a>
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
+                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#" id="promo-docs-link"><img src="/assets/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> เอกสารประชาสัมพันธ์ </a>
+                                        <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> เอกสารประชาสัมพันธ์ </a>
                                     </li>
                                 </ul>
                             </div>
@@ -78,20 +78,20 @@
                         </li>
                     </ul>
                 </div>
-
+  
                 <div class="log-sign" style="--i: 1.8s">
                     <a href="#" class="login__button">Log in</a>
                     <a href="#" class="signup__button">Sign up</a>
                 </div>
             </div>
-
+  
             <div class="hamburger-menu-container">
                 <div class="hamburger-menu">
                     <div></div>
                 </div>
             </div>
         </div>
-    </header>
+      </header>
     <div class="d-flex flex-column align-items-center">
         <div class="mt-5">
             <img src="/images/PDRC-logo.svg" alt="logo" class="logo__2__width">
