--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="#">Course</a>
+                            <a href="course.html">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
@@ -53,14 +53,14 @@
                             <a href="#">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="knowledge_sharing.html">Knowledge Sharing</a>
+                            <a href="#">Knowledge Sharing</a>
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
+                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#" id="promo-docs-link"><img src="/assets/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> เอกสารประชาสัมพันธ์ </a>
+                                        <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
                                     </li>
                                 </ul>
                             </div>
