--- a/knowledge_sharing.html
+++ b/knowledge_sharing.html
@@ -1,163 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
-    <script src="./bootstrap/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="./fontawesome/all.min.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/css/knowledge_sharing.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Drone Project</title>
-  </head>
-  <body>
-    <header>
-      <div class="container-custom">
-        <input type="checkbox" name="" id="check" />
 
-        <div class="logo-container">
-          <img src="/images/PDRC-logo.svg" alt="logo" width="40" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
+  <script src="./bootstrap/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="./fontawesome/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/knowledge_sharing.css" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <title>Drone Project</title>
+</head>
+
+<body>
+  <header>
+    <div class="container-custom">
+      <input type="checkbox" name="" id="check" />
+
+      <div class="logo-container">
+        <img src="/images/PDRC-logo.svg" alt="logo" width="40" />
+      </div>
+
+      <div class="nav-btn">
+        <div class="nav-links">
+          <ul>
+            <li class="nav-link" style="--i: 0.6s">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="nav-link" style="--i: 0.85s">
+              <a href="course.html">Course</a>
+              <div class="dropdown">
+                <ul>
+                  <li class="dropdown-link">
+                    <a href="#">
+                      <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
+                      Drone Pilot for Beginner</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#">
+                      <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
+                      Drone Pilot for Professional</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
+                      Inspection for Infrared Thermography</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
+                      Customized Course Training</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
+                      Free Course Training</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="nav-link" style="--i: 1.1s">
+              <a href="#">Activities</a>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="#" class="active">Knowledge Sharing</a>
+              <div class="dropdown-2">
+                <ul>
+                  <li class="dropdown-link">
+                    <a href="knowledge_sharing.html" class="active"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                        class="rectangle__image" />
+                      บทความ</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                        class="rectangle__image" />เอกสารประชาสัมพันธ์
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="about.html">About Us</a>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="contact.html">Contact Us</a>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="faq.html">FAQ</a>
+            </li>
+          </ul>
         </div>
 
-        <div class="nav-btn">
-          <div class="nav-links">
-            <ul>
-              <li class="nav-link" style="--i: 0.6s">
-                <a href="index.html">Home</a>
-              </li>
-              <li class="nav-link" style="--i: 0.85s">
-                <a href="#">Course</a>
-                <div class="dropdown">
-                  <ul>
-                    <li class="dropdown-link">
-                      <a href="#">
-                        <img
-                          src="/images/reactangle.png"
-                          alt="rectangle"
-                          width="10"
-                          class="rectangle__image"
-                        />
-                        Drone Pilot for Beginner</a
-                      >
-                    </li>
-                    <li class="dropdown-link">
-                      <a href="#">
-                        <img
-                          src="/images/reactangle.png"
-                          alt="rectangle"
-                          width="10"
-                          class="rectangle__image"
-                        />
-                        Drone Pilot for Professional</a
-                      >
-                    </li>
-                    <li class="dropdown-link">
-                      <a href="#"
-                        ><img
-                          src="/images/reactangle.png"
-                          alt="rectangle"
-                          width="10"
-                          class="rectangle__image"
-                        />
-                        Inspection for Infrared Thermography</a
-                      >
-                    </li>
-                    <li class="dropdown-link">
-                      <a href="#"
-                        ><img
-                          src="/images/reactangle.png"
-                          alt="rectangle"
-                          width="10"
-                          class="rectangle__image"
-                        />
-                        Customized Course Training</a
-                      >
-                    </li>
-                    <li class="dropdown-link">
-                      <a href="#"
-                        ><img
-                          src="/images/reactangle.png"
-                          alt="rectangle"
-                          width="10"
-                          class="rectangle__image"
-                        />
-                        Free Course Training</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-link" style="--i: 1.1s">
-                <a href="#">Activities</a>
-              </li>
-              <li class="nav-link" style="--i: 1.35s">
-                <a href="knowledge_sharing.html"  class="active">Knowledge Sharing</a>
-                <div class="dropdown-2">
-                  <ul>
-                    <li class="dropdown-link">
-                      <a href="#"
-                        ><img
-                          src="/images/reactangle.png"
-                          alt="rectangle"
-                          width="10"
-                          class="rectangle__image"
-                        />
-                        บทความ</a
-                      >
-                    </li>
-                    <li class="dropdown-link">
-                      <a href="#" id="promo-docs-link"
-                        ><img
-                          src="/assets/images/reactangle.png"
-                          alt="rectangle"
-                          width="10"
-                          class="rectangle__image"
-                        />
-                        เอกสารประชาสัมพันธ์
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-link" style="--i: 1.35s">
-                <a href="about.html">About Us</a>
-              </li>
-              <li class="nav-link" style="--i: 1.35s">
-                <a href="contact.html">Contact Us</a>
-              </li>
-              <li class="nav-link" style="--i: 1.35s">
-                <a href="faq.html">FAQ</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="log-sign" style="--i: 1.8s">
-            <a href="#" class="login__button">Log in</a>
-            <a href="#" class="signup__button">Sign up</a>
-          </div>
+        <div class="log-sign" style="--i: 1.8s">
+          <a href="#" class="login__button">Log in</a>
+          <a href="#" class="signup__button">Sign up</a>
         </div>
+      </div>
 
-        <div class="hamburger-menu-container">
-          <div class="hamburger-menu">
-            <div></div>
+      <div class="hamburger-menu-container">
+        <div class="hamburger-menu">
+          <div></div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <div>
+    <img src="/images/knowledge_sharing_banner.png" alt="knowledge_sharing_banner" width="100%" />
+  </div>
+  <div class="fixed-header">
+    <div class="d-flex flex-row justify-content-center">
+      <div id="btnArticle" class="red__rectangle mt-5">
+        <a href="#article">บทความที่น่าสนใจ</a>
+      </div>
+      <div id="btnPromo" class="white__rectangle mt-5 ms-3">
+        <a href="#information">ข่าวประชาสัมพันธ์</a>
+      </div>
+    </div>
+  </div>
+  <article id="article">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <p class="title__article">ประกาศอากาศยาน</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <div class="row mt-5 margin__align">
+            <div class="col-sm-12 col-md-12 col-lg-3 padding__right__align">
+              <img src="/images/article__1.png" alt="article__1" width="100%" class="article__1" />
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-9 padding__left__align">
+              <div class="article__message__box">
+                <p class="article__message__title">ประกาศกระทรวงคมนาคม</p>
+                <p class="article__message__body">
+                  เรื่อง"หลักเกณฑ์การขออนุญาตและเงื่อนไขในการบังคับหรือปล่อยอากาศยานซึ่งไม่มีนักบิน
+                  ประเภทอากาศยานที่ควบคุมการบินจากภายนอกที่มีน้ำหนักเกิน 25
+                  กิโลกรัม พ.ศ. 2567" ✈️
+                </p>
+                <div class="row">
+                  <div class="col-md-9"></div>
+                  <div class="col-md-3 d-flex justify-content-end info__block">
+                    <button class="info__button">
+                      <a href="#" class="info__text">รายละเอียด</a>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </header>
-
-    <div>
-      <img
-        src="/images/knowledge_sharing_banner.png"
-        alt="knowledge_sharing_banner"
-        width="100%"
-      />
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <div class="row mt-5 mb-5 margin__align">
+            <div class="col-sm-12 col-md-12 col-lg-3 padding__right__align">
+              <img src="/images/article__2.png" alt="article__1" width="100%" class="article__1" />
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-9 padding__left__align">
+              <div class="article__message__box">
+                <p class="article__message__title">คุณสมบัติและลักษณะของผู้บังคับหรือปล่อยอากาศยาน</p>
+                <p class="article__message__body__2">
+                  - ผ่านการอบรมจากหน่วยงานที่ผู้อำนวยการ ทพท. รับรอง <br>
+                  - ผ่านการอบรมจากโรงงานผู้ผลิตอาทาศยานฯ <br>
+                  - ผ่านการทดสอบความรู้ภาคทฤษฎีทางระบบอิเล็กทรอนิทส์ (E-Exam)
+                </p>
+                <div class="row">
+                  <div class="col-md-9"></div>
+                  <div class="col-md-3 d-flex justify-content-end info__block__2">
+                    <button class="info__button">
+                      <a href="#" class="info__text">รายละเอียด</a>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center mb-3">
+        <button id="showMoreBtn" class="btn btn-outline-danger">
+          <i class="ri-arrow-down-s-line"></i> ดูเพิ่มเติม
+        </button>
+      </div>
+      <div class="mt-3" id="hiddenArticles" style="display:none;">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="row mb-5 margin__align">
+              <div class="col-sm-12 col-md-12 col-lg-3 padding__right__align">
+                <img src="/images/article__1.png" alt="article__1" width="100%" class="article__1" />
+              </div>
+              <div class="col-sm-12 col-md-12 col-lg-9 padding__left__align">
+                <div class="article__message__box">
+                  <p class="article__message__title">อากาศยานฯ ที่มีน้ำหนัก น้อยกว่า 25 กก. ใช้หลักเกณฑ์ ตามประกาศเดิม
+                    2558</p>
+                  <p class="article__message__body">
+                    การปฏิบัติการบินอากาศยานฯซึ่งมีความเสี่ยงระดับต่ำไม่จำเป็นต้องได้รับอนุญาตหรือแจ้งล่วงหน้าแต่ต้องปฏิบัติตามเงื่อนไขที่รัฐมนตรีกำหนด
+                  </p>
+                  <div class="row">
+                    <div class="col-md-9"></div>
+                    <div class="col-md-3 d-flex justify-content-end info__block">
+                      <button class="info__button">
+                        <a href="#" class="info__text">รายละเอียด</a>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <script src="/js/knowledge_sharing.js"></script>
-    <script src="/js/script.js"></script>
-  </body>
+    </div>
+  </article>
+  <article id="information">
+    <div class="red__background">
+      <div class="container">
+        <div class="d-flex justify-content-center">
+          <p class="promo__text mt-5">ข่าวประชาสัมพันธ์</p>
+        </div>
+        <div class="row mt-5">
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="d-flex flex-column">
+              <div><img src="/images/promo_image1.png" alt="promo_image1" width="100%" class="promo__image__1"></div>
+              <div class="white__background">
+                <p class="white__text__2">เปิดโลกนวัตกรรมใหม่ กับเทคโนโลยีโดรน
+                  จังหวัดเชียงใหม่</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="d-flex flex-column">
+              <div><img src="/images/promo_image2.png" alt="promo_image2" width="100%" class="promo__image__1"></div>
+              <div class="white__background">
+                <p class="white__text">THAILAND DRONE SYMPOSIUM 2023
+                  – DRONE : POSSIBLE
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="d-flex flex-column">
+              <div><img src="/images/promo_image3.png" alt="promo_image3" width="100%" class="promo__image__1"></div>
+              <div class="white__background">
+                <p class="white__text">ดูแลงานศูนย์ควบคุมกล้องโทรทัศน์วงจรปิด
+                  (CCTV) จังหวัดสุราษฎร์ธานี</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
+  <div class="footer__block">
+    <p class="footer__text">Footer</p>
+  </div>
+  <script src="/js/knowledge_sharing.js"></script>
+  <script src="/js/script.js"></script>
+</body>
+
 </html>
