--- a/contact.html
+++ b/contact.html
@@ -28,26 +28,26 @@
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="index.html" >Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="course.html">Course</a>
+                            <a href="course.html" class="active">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                       <a href="#"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Drone Pilot for Beginner</a>
+                                       <a href="#beginner"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Drone Pilot for Professional</a>
+                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Inspection for Infrared Thermography</a>
+                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Customized Course Training</a>
+                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Free Course Training</a>
+                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
                                     </li>
                                 </ul>
                             </div>
@@ -56,7 +56,7 @@
                             <a href="#">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="#">Knowledge Sharing</a>
+                            <a href="knowledge_sharing.html">Knowledge Sharing</a>
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
@@ -72,7 +72,7 @@
                             <a href="about.html">About Us</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="contact.html" class="active">Contact Us</a>
+                            <a href="contact.html">Contact Us</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="faq.html">FAQ</a>
