--- a/course.html
+++ b/course.html
@@ -28,7 +28,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="#" class="active">Course</a>
+                            <a href="course.html" class="active">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
