--- a/knowledge_sharing.html
+++ b/knowledge_sharing.html
@@ -17,91 +17,80 @@
 <body>
   <header>
     <div class="container-custom">
-      <input type="checkbox" name="" id="check" />
+        <input type="checkbox" name="" id="check">
+        
+        <div class="logo-container">
+            <img src="/images/PDRC-logo.svg" alt="logo" width="40">
+        </div>
 
-      <div class="logo-container">
-        <img src="/images/PDRC-logo.svg" alt="logo" width="40" />
-      </div>
-
-      <div class="nav-btn">
-        <div class="nav-links">
-          <ul>
-            <li class="nav-link" style="--i: 0.6s">
-              <a href="index.html">Home</a>
-            </li>
-            <li class="nav-link" style="--i: 0.85s">
-              <a href="course.html">Course</a>
-              <div class="dropdown">
+        <div class="nav-btn">
+            <div class="nav-links">
                 <ul>
-                  <li class="dropdown-link">
-                    <a href="#">
-                      <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
-                      Drone Pilot for Beginner</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#">
-                      <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
-                      Drone Pilot for Professional</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
-                      Inspection for Infrared Thermography</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
-                      Customized Course Training</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image" />
-                      Free Course Training</a>
-                  </li>
+                    <li class="nav-link" style="--i: .6s">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="nav-link" style="--i: .85s">
+                        <a href="course.html" class="active">Course</a>
+                        <div class="dropdown">
+                            <ul>
+                                <li class="dropdown-link">
+                                   <a href="#beginner"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-link" style="--i: 1.1s">
+                        <a href="#">Activities</a>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="knowledge_sharing.html">Knowledge Sharing</a>
+                        <div class="dropdown-2">
+                            <ul>
+                                <li class="dropdown-link">
+                                    <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="about.html">About Us</a>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="contact.html">Contact Us</a>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="faq.html">FAQ</a>
+                    </li>
                 </ul>
-              </div>
-            </li>
-            <li class="nav-link" style="--i: 1.1s">
-              <a href="#">Activities</a>
-            </li>
-            <li class="nav-link" style="--i: 1.35s">
-              <a href="#" class="active">Knowledge Sharing</a>
-              <div class="dropdown-2">
-                <ul>
-                  <li class="dropdown-link">
-                    <a href="knowledge_sharing.html" class="active"><img src="/images/reactangle.png" alt="rectangle" width="10"
-                        class="rectangle__image" />
-                      บทความ</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10"
-                        class="rectangle__image" />เอกสารประชาสัมพันธ์
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-link" style="--i: 1.35s">
-              <a href="about.html">About Us</a>
-            </li>
-            <li class="nav-link" style="--i: 1.35s">
-              <a href="contact.html">Contact Us</a>
-            </li>
-            <li class="nav-link" style="--i: 1.35s">
-              <a href="faq.html">FAQ</a>
-            </li>
-          </ul>
+            </div>
+
+            <div class="log-sign" style="--i: 1.8s">
+                <a href="#" class="login__button">Log in</a>
+                <a href="#" class="signup__button">Sign up</a>
+            </div>
         </div>
 
-        <div class="log-sign" style="--i: 1.8s">
-          <a href="#" class="login__button">Log in</a>
-          <a href="#" class="signup__button">Sign up</a>
+        <div class="hamburger-menu-container">
+            <div class="hamburger-menu">
+                <div></div>
+            </div>
         </div>
-      </div>
-
-      <div class="hamburger-menu-container">
-        <div class="hamburger-menu">
-          <div></div>
-        </div>
-      </div>
-    </div>
+    </div>  
   </header>
 
   <div>
