--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <div class="logo-container">
                 <img src="/images/PDRC-logo.svg" alt="logo" width="40">
             </div>
-  
+
             <div class="nav-btn">
                 <div class="nav-links">
                     <ul>
@@ -30,23 +30,23 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="course.html">Course</a>
+                            <a href="course.html" class="active">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                       <a href="#"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Drone Pilot for Beginner</a>
+                                       <a href="#beginner"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Drone Pilot for Professional</a>
+                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Inspection for Infrared Thermography</a>
+                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Customized Course Training</a>
+                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> Free Course Training</a>
+                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
                                     </li>
                                 </ul>
                             </div>
@@ -55,20 +55,20 @@
                             <a href="#">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="#">Knowledge Sharing</a>
+                            <a href="knowledge_sharing.html">Knowledge Sharing</a>
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
                                         <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> เอกสารประชาสัมพันธ์ </a>
+                                        <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="about.html" class="active">About Us</a>
+                            <a href="about.html">About Us</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="contact.html">Contact Us</a>
@@ -78,20 +78,20 @@
                         </li>
                     </ul>
                 </div>
-  
+
                 <div class="log-sign" style="--i: 1.8s">
                     <a href="#" class="login__button">Log in</a>
                     <a href="#" class="signup__button">Sign up</a>
                 </div>
             </div>
-  
+
             <div class="hamburger-menu-container">
                 <div class="hamburger-menu">
                     <div></div>
                 </div>
             </div>
         </div>
-      </header>
+    </header>
     <div class="d-flex flex-column align-items-center">
         <div class="mt-5">
             <img src="/images/PDRC-logo.svg" alt="logo" class="logo__2__width">
