promo_document responsive success

--- a/course.html
+++ b/course.html
@@ -28,23 +28,23 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="course.html" class="active">Course</a>
+                            <a href="#" class="active" >Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                       <a href="#beginner"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                                       <a href="course.html" class="active"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
+                                        <a href="#professional" onclick="myFunction(event, this)"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
+                                        <a href="#specialist" onclick="myFunction(event, this)"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
+                                        <a href="#license" onclick="myFunction(event, this)"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
+                                        <a href="#cert" onclick="myFunction(event, this)"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
                                     </li>
                                 </ul>
                             </div>
@@ -53,7 +53,7 @@
                             <a href="#">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="knowledge_sharing.html">Knowledge Sharing</a>
+                            <a href="#">Knowledge Sharing</a>
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
@@ -79,7 +79,7 @@
 
                 <div class="log-sign" style="--i: 1.8s">
                     <a href="#" class="login__button">Log in</a>
-                    <a href="#" class="signup__button">Sign up</a>
+                    <a href="#" class="signup__button">Register</a>
                 </div>
             </div>
 
