--- a/knowledge_sharing.html
+++ b/knowledge_sharing.html
@@ -30,11 +30,11 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li class="nav-link" style="--i: .85s">
-                        <a href="course.html" class="active">Course</a>
+                        <a href="#">Course</a>
                         <div class="dropdown">
                             <ul>
                                 <li class="dropdown-link">
-                                   <a href="#beginner"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                                   <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                 </li>
                                 <li class="dropdown-link">
                                     <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
@@ -55,11 +55,11 @@
                         <a href="#">Activities</a>
                     </li>
                     <li class="nav-link" style="--i: 1.35s">
-                        <a href="knowledge_sharing.html">Knowledge Sharing</a>
+                        <a href="#" class="active">Knowledge Sharing</a>
                         <div class="dropdown-2">
                             <ul>
                                 <li class="dropdown-link">
-                                    <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
+                                    <a href="knowledge_sharing.html" class="active"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
                                 </li>
                                 <li class="dropdown-link">
                                     <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
@@ -81,7 +81,7 @@
 
             <div class="log-sign" style="--i: 1.8s">
                 <a href="#" class="login__button">Log in</a>
-                <a href="#" class="signup__button">Sign up</a>
+                <a href="#" class="signup__button">Register</a>
             </div>
         </div>
 
