--- a/course_detail.html
+++ b/course_detail.html
@@ -29,11 +29,11 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="course.html" class="active">Course</a>
+                            <a href="#" class="active">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                       <a href="#beginner"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                                       <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
@@ -54,7 +54,7 @@
                             <a href="#">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="knowledge_sharing.html">Knowledge Sharing</a>
+                            <a href="#">Knowledge Sharing</a>
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
@@ -80,7 +80,7 @@
 
                 <div class="log-sign" style="--i: 1.8s">
                     <a href="#" class="login__button">Log in</a>
-                    <a href="#" class="signup__button">Sign up</a>
+                    <a href="#" class="signup__button">Register</a>
                 </div>
             </div>
 
@@ -171,32 +171,6 @@
             <p><strong>หลักสูตร “นักบินโดรนขั้นพื้นฐานสำหรับผู้เริ่มต้น  (Drone for Beginner)”  </strong>ได้พัฒนาระบบการเรียนการสอนมุ่งเน้นความรู้ความเข้าใจเกี่ยวกับกฎหมาย ข้อบังคับ และหลักการเดินอากาศ  รวมถึงการใช้ห้วงอากาศ สร้างพื้นฐานความรู้ความเข้าใจที่ถูกต้องทั้งภาคทฤษฎีและภาคปฏิบัติ เพื่อให้สามารถใช้งานระบบ UAS (Unmanned Aircraft System)                หรือการบินโดรน (Drone) ภายในประเทศให้มีมาตรฐานมีประสิทธิภาพการบินที่ถูกต้องตามกฎหมาย มีความรู้ด้านความปลอดภัยในการบินและการบำรุงรักษาอากาศยานไร้คนขับเบื้องต้น                     เน้นให้มีทักษะ มีความรู้ ความเข้าใจในการบังคับควบคุมโดรนเบื้องต้นในท่าทางที่กำหนดตามมาตรฐานสากล และดำเนินการบินตามขั้นตอนปฏิบัติพื้นฐาน อีกทั้งมีความรู้เรื่อง การใช้ห้วงอากาศ                ร่วมกับผู้อื่น มีความสามารถในการประเมินสภาพอากาศตามหลักอุตุนิยมวิทยาก่อนทำการบิน มีการตรวจสอบตัวเองและผู้ปฏิบัติงานร่วมในด้านความพร้อมสมรรถนะร่างกายก่อนทำการบินโดรน มีความระแวดระวังและการตระหนักรู้เพื่อป้องกันอันตรายจากการบินโดรน มีความรู้เรื่องแผนรับมือต่อสถานการณ์ฉุกเฉินเมื่อเกิดอุบัติเหตุจากโดรน สามารถเข้าใจค่าพารามิเตอร์ของโดรน และตั้งค่าได้อย่างถูกต้อง มีความเข้าใจสมรรถนะของโดรน รวมถึงเทคนิคการบินโดรนให้ปลอดภัย ถูกต้องตามกฎหมายที่สำนักงานการบินพลเรือน (กพท.) กำหนดไว้</p>
         </div>
     </div>
-    <p class="advantage">คอร์สนี้คุณจะได้เรียนอะไรบ้าง?</p>
-    <div class="container advantage__margin__align">
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__first">
-                    <div>
-                       <img src="/images/correct.png" alt="correct"> 
-                    </div>
-                    <p class="advantage__first__text">การฝึกอบรมความรู้ทางทฤษฎี (Theoretical Knowledge Instruction)
-                        จำนวน 1 วัน</p>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__second">
-                    <div>
-                       <img src="/images/correct.png" alt="correct"> 
-                    </div>
-                    <div>
-                        <p class="advantage__second__text">การฝึกภาคปฏิบัติ (Practical Training) จำนวน 1 วัน </p>
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
-    <img src="/images/organization.png" alt="organization" width="100%">
     <div class="detail">
         <div class="container">
             <div class="row">
@@ -206,15 +180,6 @@
                     <ul class="unorder">
                         <li>บุคคลทั่วไป ชาย/หญิง อายุ 18 ปี ขึ้นไป</li>
                         <li>สุขภาพกายและสุขภาพจิตดี / ต้องไม่เป็นผู้ตาบอดสี</li>
-                    </ul>
-                </div>
-                <div class="col-md-12 course__text__2">ประโยชน์ที่จะได้รับจากคอร์สเรียนนี้</div>
-                <div class="col-md-12">
-                    <ul class="unorder">
-                        <li>ได้เรียนรู้ทฤษฎีและสามารถบังคับอากาศยานไร้คนขับอย่างปลอดภัยและถูกวิธี</li>
-                        <li>ได้รับทราบและเข้าใจถึงกฎหมาย ระเบียบ และข้อกำหนดต่างๆ ในการบังคับอากาศยานไร้คนขับ</li>
-                        <li>มีความมั่นใจในการใช้งานเทคโนโลยีอากาศยานไร้คนขับและเครื่องมือต่างๆ เพื่อพัฒนาต่อยอดในอนาคต</li>
-                        <li>ได้รับประกาศนียบัตร นักบินโดรน ขั้นพื้นฐานสำหรับผู้เริ่มต้น รุ่นที่ 1</li>
                     </ul>
                 </div>
                 <div class="col-md-12 course__text__2">โดรนที่ใช้ในการสอน</div>
@@ -251,7 +216,7 @@
                 <div class="question__block mt-3">
                     <i class="ri-arrow-down-s-line plus__icon" id="pi_2"></i>
                     <i class="ri-arrow-up-s-line subtract__icon" id="si_2"></i>
-                    <span class="question__text">จำเป็นต้องมีพื้นฐานการบินโดรนมาก่อนหรือไม่?</span>
+                    <span class="question__text">การฝึกภาคปฏิบัติ (Practical Training) จำนวน 1 วัน</span>
                 </div>
                 <div class="answer__block mb-5" id="ab_2">
                     <span class="answer__text">
@@ -271,6 +236,51 @@
             </div>
         </div>
     </div>
+    <p class="advantage">สิ่งที่จะได้รับจากคอร์สเรียนนี้</p>
+    <div class="container advantage__margin__align">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__first">
+                    <div>
+                       <img src="/images/correct.png" alt="correct"> 
+                    </div>
+                    <p class="advantage__first__text">ได้เรียนรู้ทฤษฎีและสามารถบังคับอากาศยานไร้คนขับอย่างปลอดภัยและถูกวิธี</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__second">
+                    <div>
+                       <img src="/images/correct.png" alt="correct"> 
+                    </div>
+                    <div>
+                        <p class="advantage__second__text">ได้รับทราบและเข้าใจถึงกฎหมาย ระเบียบ และข้อกำหนดต่างๆ ในการบังคับอากาศยานไร้คนขับ </p>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__third">
+                    <div>
+                       <img src="/images/correct.png" alt="correct"> 
+                    </div>
+                    <div>
+                        <p class="advantage__third__text">มีความมั่นใจในการใช้งานเทคโนโลยีอากาศยานไร้คนขับและเครื่องมือต่างๆ เพื่อพัฒนาต่อยอดในอนาคต</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                       <img src="/images/correct.png" alt="correct"> 
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">ได้รับประกาศนียบัตร นักบินโดรน ขั้นพื้นฐานสำหรับผู้เริ่มต้น รุ่นที่ 1</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <img src="/images/organization.png" alt="organization" width="100%">
     <p class="learn">ภาพบรรยากาศ การเรียน การสอน</p>
     <div class="d-flex flex-row gap-2 mt-5 mb-5">
         <div class="d-flex flex-column gap-2">
