--- a/faq.html
+++ b/faq.html
@@ -28,11 +28,11 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="course.html" class="active">Course</a>
+                            <a href="#">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                       <a href="#beginner"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                                       <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
@@ -72,14 +72,14 @@
                             <a href="contact.html">Contact Us</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="faq.html">FAQ</a>
+                            <a href="faq.html"  class="active">FAQ</a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="log-sign" style="--i: 1.8s">
                     <a href="#" class="login__button">Log in</a>
-                    <a href="#" class="signup__button">Sign up</a>
+                    <a href="#" class="signup__button">Register</a>
                 </div>
             </div>
 
