file can download from promo_document.html

--- a/promo_document.html
+++ b/promo_document.html
@@ -111,35 +111,35 @@
             <div class="container container__block">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="document__radio" id="documentRadios1"
-                        value="เอกสารที่สามารถดาวน์โหลดไปใช้งานได้">
+                        value="เอกสารที่สามารถดาวน์โหลดไปใช้งานได้" data-download="/files/file.pdf">
                     <label class="form-check-label" for="documentRadios1">
                         เอกสารที่สามารถดาวน์โหลดไปใช้งานได้
                     </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="document__radio" id="documentRadios2"
-                        value="ทำความรู้จักการบินโดรนเบื้องต้น">
+                        value="ทำความรู้จักการบินโดรนเบื้องต้น" data-download="/files/file.pdf">
                     <label class="form-check-label" for="documentRadios2">
                         ทำความรู้จักการบินโดรนเบื้องต้น
                     </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="document__radio" id="documentRadios3"
-                        value="เอกสารประกอบการเรียนหลักสูตรภาพถ่ายมุมสูง">
+                        value="เอกสารประกอบการเรียนหลักสูตรภาพถ่ายมุมสูง" data-download="/files/file.pdf">
                     <label class="form-check-label" for="documentRadios3">
                         เอกสารประกอบการเรียนหลักสูตรภาพถ่ายมุมสูง
                     </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="document__radio" id="documentRadios4"
-                        value="Pre-Flight Check">
+                        value="Pre-Flight Check" data-download="/files/file.pdf">
                     <label class="form-check-label" for="documentRadios4">
                         Pre-Flight Check
                     </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="document__radio" id="documentRadios5"
-                        value="Post-Flight Check">
+                        value="Post-Flight Check" data-download="/files/file.pdf">
                     <label class="form-check-label" for="documentRadios5">
                         Post-Flight Check
                     </label>
